--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "grunt-contrib-less": "~0.7.0",
     "grunt-contrib-watch": "~0.5.1",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-exec": "~0.4.2"
+    "grunt-exec": "~0.4.2",
+    "grunt-contrib-copy": "~0.4.1"
   }
 }
