--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grunt-contrib-watch": "~0.5.1",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-exec": "~0.4.2",
-    "grunt-contrib-copy": "~0.4.1"
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-jshint": "~0.6.4"
   }
 }
