--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-exec": "~0.4.2",
     "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-jshint": "~0.6.4"
+    "grunt-contrib-jshint": "~0.6.4",
+
+    "phantomjs" : "*",
+    "karma" : "*",
+    "karma-junit-reporter" : "*",    
+    "karma-jasmine" : "*",
+    "karma-ng-scenario" : "*"
+
   }
 }
