--- a/expenses/fixtures/testserver_data.yaml
+++ b/expenses/fixtures/testserver_data.yaml
@@ -1,16 +1,31 @@
 -   fields:
-        date_joined: 2013-10-02 16:25:04.439132+00:00
+        date_joined: '2013-10-02 16:25:04'
         email: existing@test.com
         groups: []
         is_active: true
         is_admin: false
         is_superuser: false
-        last_login: 2013-10-02 16:25:04.348296+00:00
-        name: null
+        last_login: '2013-10-02 16:25:04'
+        name: existing
         password: pbkdf2_sha256$10000$wEWMMW4tIqBu$8dfnhoNCKfXnJyS8Ri/CrhJMQMY//mwXi/ujb1vHY/w=
         user_permissions: []
     model: access.user
     pk: 1
+
+-   fields:
+        date_joined: '2013-10-02 16:25:04'
+        email: admin@test.com
+        groups: []
+        is_active: true
+        is_admin: true 
+        is_superuser: false
+        last_login: '2013-10-02 16:25:04'
+        name: admin
+        password: pbkdf2_sha256$10000$wEWMMW4tIqBu$8dfnhoNCKfXnJyS8Ri/CrhJMQMY//mwXi/ujb1vHY/w=
+        user_permissions: []
+    model: access.user
+    pk: 2
+
 -   fields: {name: Geral}
     model: expenses.categorygroup
     pk: 1
